# kp-lms

./: .env.example  .gitignore  conftest.py  main.py  pyproject.toml  pytest.ini
apps/academics/: admin.py  apps.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
apps/accounts/: adapters.py  admin.py  apps.py  forms.py  middleware.py  mixins.py  models.py  services.py  signals.py  urls.py  views.py
apps/assessments/: admin.py  apps.py  exports.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
apps/attendance/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
apps/bookings/: admin.py  apps.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
apps/bulk_imports/: apps.py  forms.py  importers.py  mixins.py  models.py  parsers.py  services.py  urls.py  views.py
apps/core/: admin.py  audit.py  context_processors.py  forms.py  models.py  navigation.py  permissions.py  urls.py  views.py
apps/inventory/: admin.py  apps.py  exports.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
apps/labs/: admin.py  apps.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
apps/notifications/: context_processors.py  models.py  services.py  urls.py  views.py
apps/reports/: admin.py  exports.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
static/css/: theme.css
templates/: 400.html  403.html  404.html  500.html
templates/academics/: base.html  dashboard.html  module_detail.html  (+3 more)
(+170 files in other folders)
