[project]
name = "kplms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.5.1",
    "django>=5.2.15",
    "django-allauth>=65.18.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "whitenoise>=6.12.0",
]
