[project]
name = "kplms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.5.1",
    "django>=5.2.15",
    "django-allauth>=65.18.0",
    "gunicorn>=26.0.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.12",
    "pytest-django>=4.12.0",
    "python-decouple>=3.8",
    "sentry-sdk>=2.65.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "coverage>=7.15.1",
    "djlint>=1.40.7",
    "factory-boy>=3.3.3",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.21",
]
